syntax = "proto3";

package messages;
option go_package=".;messages";


message RpcPingMessage {
	fixed64 VerifyKey = 1;
}