syntax = "proto3";

import "google/protobuf/any.proto";

package messages;
option go_package=".;messages";

message RpcResponseMessage {
    int32 SequenceID = 1;
	google.protobuf.Any Result = 2;
}

message RpcError {
    string Err = 1;
}